--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -4,3 +4,12 @@
 </div>
 <button onClick="showAnswer()" type="button" class="btn btn-primary btn-lg btn-block  btn-custom">Test your relation</button>
 <div id="answer"></div>
+
+<script>
+	function showAnswer() {
+		var name1 = document.getElementById("name1").value
+		var name2 = document.getElementById("name2").value
+		var answer = flamesGame(name1, name2);
+		document.getElementById("answer").innerHTML = answer;
+	}
+	</script>
