Modified css to make it specific

--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -2,7 +2,7 @@
 		<input id="name1" type="text" class="form-control" placeholder="Your name">
 		<input id="name2" type="text" class="form-control" placeholder="His or her name">
 </div>
-<button onClick="showAnswer()" type="button" class="btn btn-primary btn-lg btn-block  btn-custom">Test your relation</button>
+<button onClick="showAnswer()" type="button" id="btn-custom" class="btn btn-primary btn-lg btn-block">Test your relation</button>
 <div id="answer"></div>
 
 <script>
