--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -5,13 +5,16 @@ body {
 	margin: 0 0;
 }
 
-h2 {
+header {
 	background: #C0392B;
 	color: white;
-	margin: 0 0;
 	padding: 12px 16px;
 	text-align: center;
 	font-family: 'Open Sans', sans-serif;
+
+	h2 {
+		margin: 0 0;
+	}
 }
 
 h1 {
@@ -27,7 +30,7 @@ h1 {
 
 }
 
-.form-control {
+#name1, #name2 {
 	height: 70px;
 	text-align: center;
 	font-size: 20px;
@@ -36,7 +39,7 @@ h1 {
 	font-weight: 900;
 }
 
-.btn-custom {
+#btn-custom {
 	margin-top: 30px;
 	margin-right: auto;
 	margin-left: auto;
