--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,18 +1,18 @@
-<!-- <div class="input-group">
-		<input id="name1" type="text" class="form-control" placeholder="Your name">
-		<input id="name2" type="text" class="form-control" placeholder="His or her name">
+<div class="input-group">
+	<input id="name1" type="text" class="form-control" placeholder="Your name">
+	<input id="name2" type="text" class="form-control" placeholder="His or her name">
 </div>
 <button onClick="showAnswer()" type="button" id="btn-custom" class="btn btn-primary btn-lg btn-block">Test your relation</button>
-<div id="answer"></div> -->
+<div id="answer"></div>
 
-<%= form_for @user do |f| %>
+<!--<%= form_for @user do |f| %>
 	<div class="input-group">
 		<%= f.text_field :user, id: "name1", class: "form-control", placeholder: "Your name" %>
 		<%= f.text_field :partner, id: "name2", class: "form-control", placeholder: "Your name" %>
-		<%= f.submit "Test your relation", id: "btn-custom", class: "btn btn-primary btn-lg btn-block" %>
+		<%= f.submit "Test your relation", id: "btn-custom", class: "btn btn-primary btn-lg btn-block", onclick: "showAnswer()" %>
 	</div>
 <% end %>
-<div id="answer"></div>
+<div id="answer"></div>-->
 
 <script>
 	function showAnswer() {
