--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div id="footer" class="container">
 	<div class="container">
-		<p class="text-muted">&copy; Rajan Gupta</p>
+		<p class="text-muted">&copy; 2014 Rajan - All Rights Reserved</p>
 	</div>
 </div>
